--- a/Microsvc.Services.AuthAPI/appsettings.json
+++ b/Microsvc.Services.AuthAPI/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ServiceUrls": {
-    "CouponServiceUrl": "https://localhost:7001"
-  }
+  "AllowedHosts": "*"
 }
