Created Auth project and started with First controller. added models and dtos, created migration for identity tables

--- a/Microsvc.Services.AuthAPI/appsettings.json
+++ b/Microsvc.Services.AuthAPI/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-7BNG7VR;Database=Auth;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "ApiSettings": {
+    "JwtOptions": {
+      "Secret": "this is to sign and verify the jwt token, replace",
+      "Issuer": "microsvc-auth-api",
+      "Audience": "microsvc-client"
+    }
+  }
 }
