--- a/Microsvc.Web/appsettings.json
+++ b/Microsvc.Web/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ServiceUrls": {
-    "CouponServiceUrl": "https://localhost:7001"
+    "CouponServiceUrl": "https://localhost:7001",
+    "AuthServiceUrl": "https://localhost:7002"
   }
 }
