Added Product API, Created Home screen and ProductDetail screen, Releated Db changes

--- a/Microsvc.Web/appsettings.json
+++ b/Microsvc.Web/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ServiceUrls": {
     "CouponServiceUrl": "https://localhost:7001",
-    "AuthServiceUrl": "https://localhost:7002"
+    "AuthServiceUrl": "https://localhost:7002",
+    "ProductServiceUrl": "https://localhost:7000"
   }
 }
