--- a/Microsvc.Web/appsettings.json
+++ b/Microsvc.Web/appsettings.json
@@ -9,6 +9,7 @@
   "ServiceUrls": {
     "CouponServiceUrl": "https://localhost:7001",
     "AuthServiceUrl": "https://localhost:7002",
-    "ProductServiceUrl": "https://localhost:7000"
+    "ProductServiceUrl": "https://localhost:7000",
+    "ShoppingCartServiceUrl" :  ""
   }
 }
