added new API for sending the email using service bus queue. created integrations service ffor service bus

--- a/Microsvc.EmailAPI/Microsvc.Services.EmailAPI.csproj
+++ b/Microsvc.EmailAPI/Microsvc.Services.EmailAPI.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
 	  <PackageReference Include="AutoMapper" Version="13.0.1" />
+	  <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.17.5" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
@@ -20,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Microsvc.MessageBus\Microsvc.MessageBus.csproj" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
