--- a/Microsvc.Services.ShoppingCartAPI/appsettings.json
+++ b/Microsvc.Services.ShoppingCartAPI/appsettings.json
@@ -17,5 +17,8 @@
   "ServiceUrls": {
     "ProductServiceUrl": "https://localhost:7000",
     "CouponServiceUrl": "https://localhost:7001"
+  },
+  "TopicAndQueue": {
+    "EmailCartQueue": "name from azure"
   }
 }
