added registration email notification usinf service bus

--- a/Microsvc.EmailAPI/appsettings.json
+++ b/Microsvc.EmailAPI/appsettings.json
@@ -9,8 +9,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-7BNG7VR;Database=Email;Trusted_Connection=True;TrustServerCertificate=True"
   },
-  "ServiceBusConnectionString" : "",
+  "ServiceBusConnectionString" : "Test",
   "TopicAndQueue": {
-    "EmailCartQueue": "name from azure"
+    "EmailCartQueue": "name from azure",
+    "RegistrationQueue": "name from azure"
   }
 }
