--- a/Microsvc.Services.AuthAPI/appsettings.json
+++ b/Microsvc.Services.AuthAPI/appsettings.json
@@ -15,5 +15,8 @@
       "Issuer": "microsvc-auth-api",
       "Audience": "microsvc-client"
     }
+  },
+  "TopicAndQueue": {
+    "RegistrationQueue": "name from azure"
   }
 }
