Created Order API and Checkout Page and related service chage

--- a/Microsvc.Web/appsettings.json
+++ b/Microsvc.Web/appsettings.json
@@ -10,6 +10,7 @@
     "CouponServiceUrl": "https://localhost:7001",
     "AuthServiceUrl": "https://localhost:7002",
     "CartServiceUrl": "https://localhost:7003",
-    "ProductServiceUrl": "https://localhost:7000"
+    "ProductServiceUrl": "https://localhost:7000",
+    "OrderServiceUrl": "https://localhost:7004"
   }
 }
