--- a/Microsvc.Services.OrderAPI/Microsvc.Services.OrderAPI.csproj
+++ b/Microsvc.Services.OrderAPI/Microsvc.Services.OrderAPI.csproj
@@ -16,6 +16,7 @@
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	  <PackageReference Include="Stripe.net" Version="44.9.0-beta.1" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
