--- a/Micorsvc.Services.CouponAPI/Micorsvc.Services.CouponAPI.csproj
+++ b/Micorsvc.Services.CouponAPI/Micorsvc.Services.CouponAPI.csproj
@@ -15,6 +15,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Stripe.net" Version="44.9.0-beta.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
