--- a/Microsvc.Web/Microsvc.Web.csproj
+++ b/Microsvc.Web/Microsvc.Web.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\js\order.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\js\order.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="IdentityModel" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
