--- a/Microsvc.GatewaySolution/Microsvc.GatewaySolution.csproj
+++ b/Microsvc.GatewaySolution/Microsvc.GatewaySolution.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6" />
+    <PackageReference Include="Ocelot" Version="23.2.2" />
+  </ItemGroup>
+
 </Project>
