--- a/Microsvc.Web/appsettings.json
+++ b/Microsvc.Web/appsettings.json
@@ -7,10 +7,22 @@
   },
   "AllowedHosts": "*",
   "ServiceUrls": {
-    "CouponServiceUrl": "https://localhost:7001",
     "AuthServiceUrl": "https://localhost:7002",
-    "CartServiceUrl": "https://localhost:7003",
-    "ProductServiceUrl": "https://localhost:7000",
-    "OrderServiceUrl": "https://localhost:7004"
+
+    //"CouponServiceUrl": "https://localhost:7001",
+
+    //"CartServiceUrl": "https://localhost:7003",
+
+    //"ProductServiceUrl": "https://localhost:7000",
+
+    //"OrderServiceUrl": "https://localhost:7004"
+
+    "CouponServiceUrl": "https://localhost:7777",
+
+    "CartServiceUrl": "https://localhost:7777",
+
+    "ProductServiceUrl": "https://localhost:7777",
+
+    "OrderServiceUrl": "https://localhost:7777"
   }
 }
